--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT= 3000
 DB_CNN=mongodb+srv://admin:admin@cluster0.uwha4rb.mongodb.net/hospitaldb
 JWT_SECRET=jksdfjkh23487$%&KJGH@kjh
+
+GOOGLE_ID=405736979575-iq595dr1h1d4g370ga6799dl5ofshlre.apps.googleusercontent.com
+GOOGLE_SECRET=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
