--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 node_modules/
+uploads/hospitales/**.jpg
+uploads/hospitales/**.jpeg
+uploads/hospitales/**.gif
+uploads/hospitales/**.png
+
+uploads/usuarios/**.jpg
+uploads/usuarios/**.jpeg
+uploads/usuarios/**.gif
+uploads/usuarios/**.png
+
+uploads/medicos/**.jpg
+uploads/medicos/**.jpeg
+uploads/medicos/**.gif
+uploads/medicos/**.png
+
